sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:9: error: reassignment to val
			hasSwap=false;
                               ^AlgCocktailSort1:13: error: reassignment to val
				hasSwap=true;
                                       ^AlgCocktailSort1:21: error: reassignment to val
			hasSwap=false;
                               ^AlgCocktailSort1:25: error: reassignment to val
				hasSwap=true;
                                       ^